# Promise11

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: AsyncDispatcher.h  Promise.h  PromiseResolver.h  SimpleDispatcher.h  ThreadDispatcher.h
src/: AsyncDispatcher.cpp  SimpleDispatcher.cpp
